PersonalSettings now updatable; changed exports from default to named

--- a/src/components/Profile/PersonalSettings/style.module.less
+++ b/src/components/Profile/PersonalSettings/style.module.less
@@ -50,3 +50,11 @@
 .editTextInput {
   margin-bottom: 1em;
 }
+
+.inputHighlighted {
+  background-color: #fff56e;
+}
+
+.inputWide {
+  width: 100%;
+}
