--- a/src/components/Profile/ProfileOverview/style.module.less
+++ b/src/components/Profile/ProfileOverview/style.module.less
@@ -18,14 +18,15 @@
 
 .profilePageSection {
   position: relative;
-  background-color: @greyMedium;
+  background-color: @blueBright;
   padding: 3.3rem 4rem;
   text-decoration: none;
+  color: var(--bg-color);
 
   &:hover,
   &:active,
   &:focus {
-    background-color: @white;
+    background-color: @red;
   }
 
   @media (max-width: @breakPointS) {
@@ -53,6 +54,7 @@ h2 {
   position: absolute;
   bottom: 0.5rem;
   right: 1rem;
+  color: @yellow;
 
   > span {
     &:hover,
