--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -126,6 +126,10 @@
     }
   }
 
+  &.sectionGemeindeIntro {
+    padding-top: 2rem;
+  }
+
   &CrowdCollect,
   &Confetti {
     background-image: url('./backgrounds/crowd_collect_yellow_desktop.svg');
