- Added styling for two columns section - Added donation form section

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -416,3 +416,12 @@
   margin: 1rem 0 0;
   font-size: @fontSizeM;
 }
+
+.columnWrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.column {
+  width: 48%;
+}
