--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -25,6 +25,8 @@
   &:nth-child(3n + 2) {
     --bg-color: @red;
     --font-color: @greyBright;
+    --secondary-color: @pink;
+    --text-on-secondary-color: @grey;
     background-color: @red;
     color: @greyBright;
   }
@@ -33,6 +35,8 @@
   &:only-child {
     --bg-color: @grey;
     --font-color: @red;
+    --secondary-color: @yellow;
+    --text-on-secondary-color: @red;
     background-color: @grey;
     color: @red;
   }
