Added a christmas theme to the donation form

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -80,3 +80,16 @@
 .hint {
   font-size: @fontSizeXS;
 }
+
+.christmasTheme {
+  background-color: @red;
+  color: @grey;
+
+  button {
+    background-color: @grey;
+  }
+
+  label > span {
+    //background-color: green;
+  }
+}
