--- a/src/components/CampaignMap/style.module.less
+++ b/src/components/CampaignMap/style.module.less
@@ -8,6 +8,7 @@
 
 .interfaceContainer {
   position: relative;
+  z-index: 0;
   height: 100%;
 }
 
@@ -97,4 +98,30 @@
   .bottom {
     grid-area: bottom;
   }
+}
+
+.tooltipContainer {
+  position: absolute;
+  max-width: 35%;
+  pointer-events: none;
+  padding: 1.75rem;
+  z-index: 1;
+}
+
+.tooltipHeader {
+  // margin-top: 0.75rem;
+  margin-bottom: 0.15rem;
+  font-size: @fontSizeL;
+}
+.tooltipInfo {
+  margin-top: 0.75rem;
+  line-height: @fontSizeS;
+}
+
+.tooltipNumber {
+  font-size: @fontSizeM;
+}
+
+.tooltipLabel {
+  font-size: @fontSizeXS;
 }
