--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -13,6 +13,7 @@
   line-height: inherit;
   max-width: 100%;
   width: @inputWidth;
+  font-size: @fontSizeL;
 
   @media (max-width: @breakPointS) {
     width: 100%;
@@ -28,8 +29,8 @@
   }
 }
 
-.textInput {
-  font-size: @fontSizeL;
+.textInputSmall {
+  font-size: @fontSizeS;
 }
 
 .textInputInline {
