--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -13,6 +13,16 @@
     font-size: @fontSizeM;
   }
 
+  &.small {
+    font-size: @fontSizeXS;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 1em;
+  }
+
   &:hover {
     color: var(--bg-color);
     background: var(--font-color);
