--- a/src/components/Municipality/MunicipalityIntro/style.module.less
+++ b/src/components/Municipality/MunicipalityIntro/style.module.less
@@ -5,9 +5,7 @@
 }
 
 .mapContainer {
-  height: 50vh;
-  margin-bottom: 1rem;
-  // border: 1px solid @red;
+  height: 45vh;
 }
 
 .bodyContainer {
@@ -16,4 +14,5 @@
 
 .headline {
   font-size: @fontSizeXXL;
+  line-height: 1.15;
 }
