fixed missing bracket

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -86,7 +86,7 @@
   background-color: @red;
   color: @grey;
 
-  button 
+  button {
     border: 1px solid @grey;
     color: @grey !important;
   }
