--- a/src/components/Forms/ImageUpload/style.module.less
+++ b/src/components/Forms/ImageUpload/style.module.less
@@ -1,12 +1,20 @@
 @import '../../style/vars.less';
 
 .avatarImage {
-  height: 5rem;
-  width: 5rem;
   display: block;
-  margin-top: 1rem;
   transition: transform 0.3s;
   pointer-events: all;
+
+  &.default {
+    margin-top: 1rem;
+    height: 5rem;
+    width: 5rem;
+  }
+
+  &.large {
+    height: 7rem;
+    width: 7rem;
+  }
 
   @media (max-width: @breakPointM) {
     height: 4rem;
@@ -33,11 +41,20 @@
 
 .avatarImageLabel {
   position: absolute;
-  top: calc(100% + 6.5rem);
-  left: calc(100% + 4.5rem);
   width: 15rem;
-  font-size: @fontSizeS;
   pointer-events: all;
+
+  &.default {
+    top: calc(100% + 6.5rem);
+    left: calc(100% + 4.5rem);
+    font-size: @fontSizeS;
+  }
+
+  &.editing {
+    top: calc(100% - 1rem);
+    left: calc(100% + 2rem);
+    font-size: @fontSizeXS;
+  }
 
   @media (max-width: @breakPointM) {
     transform: rotate(70deg);
@@ -75,6 +92,13 @@
   position: relative;
   top: -4rem;
   left: 7rem;
+}
+
+.submitButtonEditing {
+  visibility: hidden;
+  position: relative;
+  top: 4rem;
+  left: -2rem;
 }
 
 .submitButtonDirty {
