--- a/src/components/Profile/PersonalSettings/style.module.less
+++ b/src/components/Profile/PersonalSettings/style.module.less
@@ -29,22 +29,7 @@
 }
 
 .saveChangesBtn {
-  font-size: 14px;
-  border-radius: 5px;
-  padding-top: 5px;
-  padding-bottom: 1px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.saveChangesBtnSmall {
-  font-size: 14px;
-  border-radius: 5px;
-  padding-top: 5px;
-  padding-bottom: 1px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 1em;
+  margin-top: 0.5em;
 }
 
 .editTextInput {
