--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -81,3 +81,13 @@
     margin-top: 2rem;
   }
 }
+
+.backToProfile {
+  grid-column: wide-start / 5;
+  left: 1rem;
+  margin-bottom: 3rem;
+
+  &:before {
+    content: '< ';
+  }
+}
