Deckgl legend test

--- a/src/components/CampaignMap/style.module.less
+++ b/src/components/CampaignMap/style.module.less
@@ -125,3 +125,12 @@
 .tooltipLabel {
   font-size: @fontSizeXS;
 }
+
+.legendContainer {
+  position: absolute;
+  top: 0;
+  transform: translate(5%, 5%);
+  height: 90%;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.9);
+}
