ProfileNotifictions: phone save button styling

--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -21,8 +21,9 @@
   margin: 0.25em 0em 0.5em 0em;
 }
 
-.savePhoneNumberBtn {
-  margin-left: 1em;
+.phoneNumberInput {
+  margin-right: 1em;
+  margin-bottom: 0.5em;
 }
 
 .optionRow {
