color scheme municipality intro section

--- a/src/components/Municipality/MunicipalityIntro/style.module.less
+++ b/src/components/Municipality/MunicipalityIntro/style.module.less
@@ -1,5 +1,14 @@
 @import '../../style/vars.less';
 
+.mapSection {
+  --bg-color: @pink !important;
+  --font-color: @greyBright !important;
+  --secondary-color: @red !important;
+  --text-on-secondary-color: @greyBright !important;
+  background-color: @pink !important;
+  color: @greyBright !important;
+}
+
 .headerContainer {
   grid-column: wide-start / wide-end;
 }
