two column layout mvp

--- a/src/components/CampaignMap/style.module.less
+++ b/src/components/CampaignMap/style.module.less
@@ -33,7 +33,9 @@
 .buttonContainer {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
+  margin-left: 1rem;
+  margin-top: 1rem;
   z-index: 1;
 }
 
