TwoColumns optimiezed for mobile

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -16,7 +16,7 @@
 
   div {
     font-size: @fontSizeM;
-    // margin-bottom: 0; // NOTE: Removed, but not sure where it was needed?
+    margin-bottom: 0; // Overwrites unneeded field container margins
 
     @media (max-width: @breakPointM) {
       font-size: @fontSizeS;
