Small styling fix for enter login code

--- a/src/components/Login/EnterLoginCode/style.module.less
+++ b/src/components/Login/EnterLoginCode/style.module.less
@@ -6,7 +6,8 @@
 
 .buttonContainer > div {
   display: flex;
-  width: 14rem;
+  margin-top: 1rem;
+  max-width: 21rem;
   justify-content: center;
 
   span {
@@ -19,5 +20,5 @@
 }
 
 .loginForm {
-  margin-bottom: 2.5rem;
+  margin-bottom: 0;
 }
