style back to start page fix

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -100,6 +100,10 @@
   .adjustFinallyMessage {
     --secondary-color: @red;
     --text-on-secondary-color: var(--bg-color);
+    // --font-color: @grey;
+  }
+  .buttonContainer a {
+    border-color: @grey;
   }
 
   button {
