button hover state: wip

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -104,11 +104,20 @@
   }
   .buttonContainer a {
     border-color: @grey;
+    &:hover {
+      color: var(--font-color);
+      background: var(--bg-color);
+    }
   }
 
   button {
     border: 1px solid @grey;
     color: @grey;
+
+    &:hover {
+      color: var(--font-color);
+      background: var(--bg-color);
+    }
   }
 
   .primaryButton {
