hover state confirm donation and code button

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -100,8 +100,8 @@
   .adjustFinallyMessage {
     --secondary-color: @red;
     --text-on-secondary-color: var(--bg-color);
-    // --font-color: @grey;
   }
+
   .buttonContainer a {
     border-color: @grey;
     &:hover {
@@ -115,8 +115,8 @@
     color: @grey;
 
     &:hover {
-      color: var(--font-color);
-      background: var(--bg-color);
+      color: @red;
+      background: @grey;
     }
   }
 
