Additions to two column section

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -461,6 +461,10 @@
   font-size: @fontSizeM;
 }
 
+.columnIntroText {
+  margin-bottom: 4rem;
+}
+
 .columnWrapper {
   display: flex;
   flex-wrap: wrap;
@@ -468,7 +472,10 @@
 }
 
 .column {
-  width: 48%;
+  width: 44%;
+  font-weight: normal;
+  font-size: @fontSizeS;
+  margin-bottom: 2rem;
 
   @media (max-width: @breakPointM) {
     width: 100%;
