Changed video section, added snow on main page

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -46,10 +46,10 @@
   the rules set with nth-child*/
 
   &.sectionChristmas {
-    background-color: @grey !important;
-    color: @red !important;
-    --bg-color: @grey !important;
-    --font-color: @red !important;
+    background-color: @red !important;
+    color: @greyBright !important;
+    --bg-color: @red!important;
+    --font-color: @greyBright !important;
     --secondary-color: @yellow !important;
     --text-on-secondary-color: @red !important;
   }
@@ -484,4 +484,9 @@
 
 .sectionChristmasDonation {
   background-color: @grey !important;
+}
+
+.sectionVideo {
+  background-color: @red !important;
+  color: @greyBright !important;
 }
