--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -1,8 +1,11 @@
 @import '../../style/vars.less';
 
 .donationForm {
-  background-color: var(--bg-color);
-  border: 1px solid var(--font-color);
+  --bg-color: @red;
+  --font-color: @grey;
+  --text-on-secondary-color: @grey;
+  background-color: @red;
+  color: @grey;
   font-weight: normal;
   margin-top: 3em;
   padding: 30px 40px 40px 40px;
@@ -39,18 +42,6 @@
   flex-wrap: wrap;
   margin-top: 2rem;
   width: 20rem;
-}
-
-.primaryButton {
-  background: var(--font-color);
-  color: var(--bg-color);
-  border: none;
-
-  &:hover,
-  &:focus {
-    background: darken(@red, 10%);
-    box-shadow: none;
-  }
 }
 
 .link {
@@ -93,73 +84,92 @@
 
 .christmasTheme {
   --bg-color: @grey;
-
   background-color: @red;
   color: @grey;
+}
 
-  .adjustFinallyMessage {
-    --secondary-color: @red;
-    --text-on-secondary-color: var(--bg-color);
-  }
+// Put all the following styles back into christmas theme when christmas is over
+.adjustFinallyMessage {
+  --secondary-color: @red;
+  --text-on-secondary-color: @grey;
+}
 
-  .buttonContainer a {
-    border-color: @grey;
-    &:hover {
-      color: var(--font-color);
-      background: var(--bg-color);
-    }
-  }
-
-  button {
-    border: 1px solid @grey;
-    color: @grey;
-
-    &:hover {
-      color: @red;
-      background: @grey;
-    }
-  }
-
-  .primaryButton {
-    background-color: @grey;
-    color: @red !important;
-    border: none;
-
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: darken(@grey, 10%);
-      border: none;
-    }
-  }
-
-  // Radio Buttons
-  input:checked ~ span {
-    background-color: @grey !important;
-
-    &:after {
-      background-color: @red;
-    }
-  }
-
-  // Checkboxes
-  label > input {
-    background-color: @grey;
-    border: none;
-  }
-
-  label > input:checked {
-    background-color: @grey;
-    border: none;
-    color: @red;
+.buttonContainer a {
+  border-color: @grey;
+  &:hover {
+    color: var(--font-color);
+    background: var(--bg-color);
   }
 }
 
-.adjustFinallyMessage {
-  --secondary-color: var(--bg-color);
-  --text-on-secondary-color: var(--font-color);
+button {
+  border: 1px solid @grey;
+  color: @grey;
+
+  &:hover {
+    color: @red;
+    background: @grey;
+  }
+}
+
+.primaryButton {
+  background-color: @grey;
+  color: @red !important;
+  border: none;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: darken(@grey, 10%);
+    border: none;
+  }
+}
+
+// Radio Buttons
+input:checked ~ span {
+  background-color: @grey !important;
+
+  &:after {
+    background-color: @red !important;
+  }
+}
+
+// Checkboxes
+label > input {
+  background-color: @grey;
+  border: none;
+}
+
+label > input:checked {
+  background-color: @grey;
+  border: none;
+  color: @red;
 }
 
 .certificateInfo {
   margin-top: 3rem;
+}
+
+/* Leftover styles in case we want to 
+switch back from christmas theme */
+.standardColors {
+  background-color: var(--bg-color);
+  border: 1px solid var(--font-color);
+
+  .primaryButton {
+    background: var(--font-color);
+    color: var(--bg-color);
+    border: none;
+
+    &:hover,
+    &:focus {
+      background: darken(@red, 10%);
+      box-shadow: none;
+    }
+  }
+
+  .adjustFinallyMessage {
+    --secondary-color: var(--bg-color);
+    --text-on-secondary-color: var(--font-color);
+  }
 }
