wrap icons for centering

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -481,6 +481,9 @@
     width: 100%;
   }
 }
+.columnIconWrapper {
+  text-align: center;
+}
 
 .sectionChristmasDonation {
   background-color: @grey !important;
