--- a/src/components/Municipality/MunicipalityIntro/style.module.less
+++ b/src/components/Municipality/MunicipalityIntro/style.module.less
@@ -1,12 +1,12 @@
 @import '../../style/vars.less';
 
 .mapSection {
-  --bg-color: @pink !important;
-  --font-color: @greyBright !important;
-  --secondary-color: @red !important;
-  --text-on-secondary-color: @greyBright !important;
-  background-color: @pink !important;
-  color: @greyBright !important;
+  --bg-color: @pink;
+  --font-color: @greyBright;
+  --secondary-color: @red;
+  --text-on-secondary-color: @greyBright;
+  background-color: @pink;
+  color: @greyBright;
 }
 
 .headerContainer {
@@ -41,9 +41,21 @@
   display: flex;
   flex-wrap: wrap;
 }
+
 .flexItem {
   width: 50%;
   @media (max-width: @breakPointL) {
     width: 100%;
   }
+}
+
+.adjustFinallyMessage {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  --secondary-color: var(--bg-color);
+  --text-on-secondary-color: var(--font-color);
+}
+
+.adjustFinallyMessage > div > div:first-child {
+  padding: 0; // remove padding of original finally message
 }
