donation-feature: fix checkmark in christmas theme, added certifcate in mail hint

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -86,6 +86,9 @@
   --bg-color: @grey;
   background-color: @red;
   color: @grey;
+  & input:checked {
+    color: @red;
+  }
 }
 
 // Put all the following styles back into christmas theme when christmas is over
