--- a/src/components/CampaignMap/style.module.less
+++ b/src/components/CampaignMap/style.module.less
@@ -13,9 +13,6 @@
 }
 
 .mapContainer {
-  // position: relative;
-  // background: #f0f0f0;
-  // border: 1px solid #e8e8e8;
   height: 100%;
 }
 
@@ -34,8 +31,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  margin-left: 1rem;
-  margin-top: 1rem;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
   z-index: 1;
 }
 
@@ -58,8 +55,9 @@
   cursor: pointer;
 
   &:hover {
-    color: var(--bg-color);
-    background: #f17476;
+    color: var(--font-color);
+    background: var(--bg-color);
+    border: 1px solid var(--font-color);
   }
 
   &:focus {
@@ -104,7 +102,8 @@
 
 .tooltipContainer {
   position: absolute;
-  max-width: 35%;
+  min-width: 200px;
+  width: 60%;
   pointer-events: none;
   padding: 1.75rem;
   z-index: 1;
