--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -20,7 +20,9 @@
   margin-top: 7rem;
   margin-left: auto;
   margin-right: auto;
-  max-width: 70rem;
+  max-width: 74rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
