Sharing Feature: first draft

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -20,7 +20,11 @@
 
   &.noBackgroundAndPadding {
     margin-top: 0;
-    padding: 0;
+    padding: 1rem;
+    --bg-color: none;
+    background-color: var(--bg-color);
+    color: @red;
+    font-weight: normal;
   }
 
   h3 {
