Check if user is authenticated

--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -16,6 +16,11 @@
   line-height: normal;
 }
 
+.loggedOutHint {
+  text-align: center;
+  margin-top: 6rem;
+}
+
 .breadcrumbContainer {
   margin-top: 7rem;
   margin-left: auto;
