New placeholder image and Progress bar styling

--- a/src/components/Onboarding/Mitmachen/MunicipalityInfo/style.module.less
+++ b/src/components/Onboarding/Mitmachen/MunicipalityInfo/style.module.less
@@ -23,6 +23,7 @@
 }
 
 .progressBarContainer {
+  position: relative;
   width: 100%;
 }
 
@@ -78,6 +79,7 @@
 
 .barCurrent {
   position: relative;
+  bottom: 1rem;
   height: 3rem;
   font-size: @fontSizeXXXL;
   color: var(--text-on-secondary-color);
