animation: growth from a few cities

--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -105,27 +105,32 @@
   min-width: 200px;
   width: 60%;
   pointer-events: none;
-  padding: 1.75rem;
+  padding: 1.5rem;
   z-index: 1;
   border: 2px solid #fff;
 }
 
 .tooltipHeader {
   // margin-top: 0.75rem;
-  margin-bottom: 0.15rem;
-  font-size: @fontSizeL;
+  margin-bottom: 0.75rem;
+  font-size: @fontSizeM;
 }
+.tooltipMunicipality {
+  .linkUnderlined()
+}
+
 .tooltipInfo {
-  margin-top: 0.75rem;
+  margin-top: 0.4rem;
   line-height: @fontSizeS;
 }
 
 .tooltipNumber {
-  font-size: @fontSizeM;
+  font-size: @fontSizeXS;
 }
 
 .tooltipLabel {
   font-size: @fontSizeXS;
+  font-weight: 400;
 }
 
 // .legendContainer {
